# ChangeLog for sys-libs/db
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.299 2010/01/24 18:29:31 armin76 Exp $

  24 Jan 2010; Raúl Porcel <armin76@gentoo.org> db-4.7.25_p4.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #285324

  04 Nov 2009; Markus Meier <maekke@gentoo.org> db-4.7.25_p4.ebuild:
  arm stable, bug #285324

  01 Oct 2009; Tobias Klausmann <klausman@gentoo.org> db-4.7.25_p4.ebuild:
  Stable on alpha, bug #285324

  30 Sep 2009; Markus Meier <maekke@gentoo.org> db-4.7.25_p4.ebuild:
  amd64/x86 stable, bug #285324

  27 Sep 2009; nixnut <nixnut@gentoo.org> db-4.7.25_p4.ebuild:
  ppc stable #285324

  26 Sep 2009; Brent Baude <ranger@gentoo.org> db-4.7.25_p4.ebuild:
  Marking db-4.7.25_p4 ppc64 for bug 285324

  23 Sep 2009; Jeroen Roovers <jer@gentoo.org> db-4.7.25_p4.ebuild:
  Stable for HPPA (bug #285324).

  20 Sep 2009; Robin H. Johnson <robbat2@gentoo.org> db-4.2.52_p4-r2.ebuild,
  db-4.2.52_p5.ebuild, db-4.2.52_p5-r1.ebuild, db-4.3.29-r2.ebuild,
  db-4.3.29_p1.ebuild, db-4.3.29_p1-r1.ebuild, db-4.4.20_p4.ebuild,
  db-4.4.20_p4-r1.ebuild, db-4.5.20_p2.ebuild, db-4.5.20_p2-r1.ebuild,
  db-4.6.21_p4.ebuild, db-4.7.25_p3.ebuild, db-4.7.25_p4.ebuild,
  db-4.8.24.ebuild:
  berkeley_db_svc is not always built, and might be going away permanently
  in db-4.8 series, but I suspect it might come back too, so just don't try
  to rename it if it doesn't exist. Thanks to Sebastian Luettich
  <selu@mediman.org>.

  19 Sep 2009; Robin H. Johnson <robbat2@gentoo.org> db-4.8.24.ebuild,
  +files/db-4.8.24-java-manifest-location.patch:
  Bug #285516: Build fix for java compile.

*db-4.8.24 (18 Sep 2009)

  18 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +db-4.8.24.ebuild, +files/db-4.8-libtool.patch:
  Version bump (bug #285320).

  15 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>