@@ -32,6 +32,7 @@ DIST db-4.5.20.tar.gz 9281894 RMD160 5fc492efcddce6f446c5977128f5526f73763e01 SH
 DIST db-4.6.21.tar.gz 11881885 RMD160 ccf9a4b85cc0464b2f3c2f2da29d99328fd4978e SHA1 5be3beb82e42a78ff671a3f5a4c30e5652972119 SHA256 53ea9c9f03746a0aa415e6706e9c6da18ca18148f20ad1465b182411a7985e21
 DIST db-4.7.25.tar.gz 13124129 RMD160 9a5d8149d61452906c3f1c36f2859a2033c8bc3b SHA1 957c10358df1211e1dc37ea997aadef42117d6a5 SHA256 f14fd96dd38915a1d63dcb94a63fbb8092334ceba6b5060760427096f631263e
 DIST db-4.8.24.tar.gz 22900528 RMD160 848895409f81ab17f6f576d10c00a7897e13bc95 SHA1 264b5067b5df6654d5fe1402f8c9c1aa677abf63 SHA256 bcbd9021250d9cb5992a1adf83cc7c9f08de7d5cfe02a25dbef928316bff5c88
+DIST db-4.8.26.tar.gz 22898132 RMD160 816ddaf1b90013e6500255ee6b5d0e5acca486d1 SHA1 f39aff01483aa8de2b1864242028f9a21c38c7cd SHA256 f755d15f79cf6fc5a61d94bc3c8cfd3f9cb0ce3d454379d5981c54b326809d41
 DIST db.1.85.tar.gz 270953 RMD160 594253b7e80323cddc92cd7c89934217d403f58b SHA1 ccb057b07761d1b2b34626e748c7392c749d5e6d SHA256 4220d4ddeb77fb57ba2f37c1aa105d561d3ef85a6fb89c79c3edd735d0e193c6
 DIST patch.3.2.9.1 2139 RMD160 a018e1e91102c972279ec017e1d87d6d87f99a56 SHA1 34108ae9ce03c40c4d1016e9e54690d5d8fc4135 SHA256 6d89a42ee0be9e47b3e8a42981c65266a556de84bc6281edcf0f977f52547798
 DIST patch.3.2.9.2 495 RMD160 c9982844d99e1c78efddcb7b7615c41f6225e6b9 SHA1 c447c089f44c401c174244a7f9f7967522ba92a4 SHA256 61db874796fe8789b0045f456285b27c5b8b7b8902a5e342a115456015716d0e
@@ -65,5 +66,6 @@ EBUILD db-4.6.21_p4.ebuild 6464 RMD160 9700f98db953cf1e47daa81f9146ff4d0a472d03 
 EBUILD db-4.7.25_p3.ebuild 5129 RMD160 2fb51c97d62083be82c616114eb15c27254b5d79 SHA1 b6b69b75ed5db72f220a3426dc98e6ebfa47478c SHA256 a77a34366b095067c6383517b05e13f620ca36a17d5fc4a4964d45d4eaac2474
 EBUILD db-4.7.25_p4.ebuild 5429 RMD160 7f72176ce25e7ad27896218abc8473265825e7b3 SHA1 1dac61413b8946bfc580970de23c9e4a8808c1db SHA256 61691d5aeac112e4c278532ad706c0bb45095885e77247272732c1bdb60a3087
 EBUILD db-4.8.24.ebuild 5510 RMD160 064c4c9d7ec5f0077e5d6bd726823633b91772ea SHA1 2406c940df0b2d45639ddceb48c3d6e887358359 SHA256 5a6779858c448b1226ab7acd132d6259f945c475483ba99bfedfc60e450d2e0c
-MISC ChangeLog 46912 RMD160 5cb74114cc6ce7873aed85750cb91afdee7bd113 SHA1 47e7795b65b9a69354ef1303441b179b11332d97 SHA256 db73f61d26cba457bf8cd94c063dc765f96f3ec3c51168dcc29f438a4a639dad
+EBUILD db-4.8.26.ebuild 5510 RMD160 9a8871cc1b695275f8ad0c2aba275133c4f79e85 SHA1 4b1f6b473927c3a3d2fb01ba10ed45384d639516 SHA256 c0888047edd8ab39812554e2d838310fb8eda68691ff9d87ec342045461275a0
+MISC ChangeLog 47040 RMD160 7401ee438e46b2d6cfa83098d123a6dbc1e4bc7d SHA1 6b84b1e64410b9604634df571d505a18638e5337 SHA256 32db4f4cf041993e7f91ee8c7c1cbac90e02231226a82d4c3c12e6cb64a9cc49
 MISC metadata.xml 1657 RMD160 f474f2ae4512bb017c5f6d344d5d2d1b03dc6b47 SHA1 f24d5b8ab267859ddc9c1ddb0c10992d31809ec9 SHA256 cb82ec7afe1d3df3b38835aa74a6d467f5b31f98a783df9a01396a546acdf044
